--- a/Research Project/src/application/Dictionary Attack.fxml
+++ b/Research Project/src/application/Dictionary Attack.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ProgressBar?>
@@ -14,44 +15,54 @@
             <Font name="Arial Black" size="35.0" />
          </font>
       </Label>
-      <Pane layoutX="538.0" layoutY="96.0" prefHeight="142.0" prefWidth="533.0">
+      <Pane layoutX="377.0" layoutY="97.0" prefHeight="142.0" prefWidth="850.0">
          <children>
-            <ProgressBar fx:id="pgb_OverallProgress" layoutX="13.0" layoutY="47.0" prefHeight="48.0" prefWidth="322.0" progress="0.0" />
-            <Label layoutX="13.0" layoutY="14.0" text="Overall Progress" textFill="#f20d0d">
+            <ProgressBar fx:id="pgb_OverallProgress" layoutX="105.0" layoutY="93.0" prefHeight="29.0" prefWidth="225.0" progress="0.0" />
+            <Label layoutX="63.0" layoutY="45.0" text="Overall Progress" textFill="#f20d0d">
                <font>
                   <Font name="Arial Black" size="21.0" />
                </font>
             </Label>
-            <Label layoutX="352.0" layoutY="36.0" prefHeight="19.0" prefWidth="131.0" text="Total Checked">
+            <Label layoutX="381.0" layoutY="26.0" prefHeight="32.0" prefWidth="161.0" text="Total Checked:">
                <font>
-                  <Font name="System Bold" size="13.0" />
+                  <Font name="System Bold" size="22.0" />
                </font>
             </Label>
-            <Label layoutX="215.0" layoutY="14.0" prefHeight="31.0" prefWidth="80.0" text="0.0%" textFill="#f20d0d">
+            <Label fx:id="lbl_TotalProgress" layoutX="266.0" layoutY="45.0" prefHeight="31.0" prefWidth="107.0" text="0.0%" textFill="#f20d0d">
                <font>
                   <Font name="Arial Black" size="21.0" />
                </font>
             </Label>
-            <Label layoutX="352.0" layoutY="61.0" prefHeight="19.0" prefWidth="131.0" text="Cracked" textFill="#4edd10">
+            <Label layoutX="378.0" layoutY="62.0" prefHeight="32.0" prefWidth="89.0" text="Cracked:" textFill="#4edd10">
                <font>
-                  <Font name="System Bold" size="13.0" />
+                  <Font name="System Bold" size="22.0" />
                </font>
             </Label>
-            <Label layoutX="352.0" layoutY="86.0" prefHeight="19.0" prefWidth="131.0" text="Not Found" textFill="#f80d0d">
+            <Label layoutX="380.0" layoutY="96.0" prefHeight="19.0" prefWidth="131.0" text="Not Found:" textFill="#f80d0d">
                <font>
-                  <Font name="System Bold" size="13.0" />
+                  <Font name="System Bold" size="22.0" />
                </font>
             </Label>
-            <Label fx:id="lbl_TotalChecked" layoutX="449.0" layoutY="37.0" prefHeight="17.0" prefWidth="80.0" text="0" />
-            <Label fx:id="lbl_TotalCracked" layoutX="418.0" layoutY="62.0" text="0" />
-            <Label fx:id="lbl_TotalFailed" layoutX="424.0" layoutY="87.0" text="0" />
+            <Label fx:id="lbl_TotalChecked" layoutX="558.0" layoutY="24.0" prefHeight="36.0" prefWidth="246.0" text="0">
+               <font>
+                  <Font size="22.0" />
+               </font></Label>
+            <Label fx:id="lbl_TotalCracked" layoutX="490.0" layoutY="61.0" prefHeight="32.0" prefWidth="245.0" text="0">
+               <font>
+                  <Font size="22.0" />
+               </font></Label>
+            <Label fx:id="lbl_TotalFailed" layoutX="517.0" layoutY="101.0" prefHeight="32.0" prefWidth="267.0" text="0">
+               <font>
+                  <Font size="22.0" />
+               </font></Label>
          </children>
       </Pane>
-      <ListView fx:id="listView_CrackedPasswords" layoutX="40.0" layoutY="475.0" prefHeight="285.0" prefWidth="260.0" />
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="38.0" layoutY="439.0" prefHeight="39.0" prefWidth="260.0" text="Cracked Passwords" textAlignment="CENTER" textFill="#4c9e0d">
+      <ListView fx:id="listView_CrackedPasswords" layoutX="40.0" layoutY="173.0" prefHeight="587.0" prefWidth="260.0" />
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="40.0" layoutY="129.0" prefHeight="39.0" prefWidth="260.0" text="Cracked Passwords" textAlignment="CENTER" textFill="#4c9e0d">
          <font>
             <Font size="27.0" />
          </font>
       </Label>
+      <PieChart fx:id="chart_WordLengthDistribution" layoutX="336.0" layoutY="450.0" prefHeight="322.0" prefWidth="470.0" />
    </children>
 </AnchorPane>
