--- a/Research Project/src/application/Application.fxml
+++ b/Research Project/src/application/Application.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
@@ -228,7 +229,8 @@
                                     <Label layoutX="210.0" layoutY="159.0" prefHeight="17.0" prefWidth="318.0" text="Total Threads To Dedicate To Cracking A Single Password" />
                                     <TextField fx:id="textField_TotalWordsToCheckAtOnce" layoutX="276.0" layoutY="94.0" prefHeight="25.0" prefWidth="171.0" />
                                     <TextField fx:id="threadsToDedicateToASinglePassword" layoutX="287.0" layoutY="178.0" />
-                                    <Button layoutX="28.0" layoutY="67.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="128.0" text="File Ouput Directory" />
+                                    <Button fx:id="selectOutputFile" layoutX="28.0" layoutY="67.0" mnemonicParsing="false" onAction="#chooseOutputFile" prefHeight="40.0" prefWidth="128.0" text="File Ouput Directory" />
+                                    <CheckBox layoutX="8.0" layoutY="49.0" mnemonicParsing="false" text="Include Password Feedback" />
                                  </children>
                               </AnchorPane>
                           </content>
