--- a/Research Project/src/application/Dictionary Attack.fxml
+++ b/Research Project/src/application/Dictionary Attack.fxml
@@ -36,12 +36,12 @@
                   <Font name="Arial Black" size="21.0" />
                </font>
             </Label>
-            <Label layoutX="378.0" layoutY="62.0" prefHeight="32.0" prefWidth="89.0" text="Cracked:" textFill="#4edd10">
+            <Label layoutX="378.0" layoutY="62.0" prefHeight="32.0" prefWidth="129.0" text="Cracked:" textFill="#4edd10">
                <font>
                   <Font name="System Bold" size="22.0" />
                </font>
             </Label>
-            <Label layoutX="380.0" layoutY="96.0" prefHeight="19.0" prefWidth="131.0" text="Not Found:" textFill="#f80d0d">
+            <Label layoutX="380.0" layoutY="96.0" prefHeight="32.0" prefWidth="149.0" text="Not Found:" textFill="#f80d0d">
                <font>
                   <Font name="System Bold" size="22.0" />
                </font>
@@ -50,11 +50,11 @@
                <font>
                   <Font size="22.0" />
                </font></Label>
-            <Label fx:id="lbl_TotalCracked" layoutX="490.0" layoutY="61.0" prefHeight="32.0" prefWidth="245.0" text="0">
+            <Label fx:id="lbl_TotalCracked" layoutX="520.0" layoutY="61.0" prefHeight="32.0" prefWidth="212.0" text="0">
                <font>
                   <Font size="22.0" />
                </font></Label>
-            <Label fx:id="lbl_TotalFailed" layoutX="517.0" layoutY="99.0" prefHeight="32.0" prefWidth="267.0" text="0">
+            <Label fx:id="lbl_TotalFailed" layoutX="538.0" layoutY="99.0" prefHeight="32.0" prefWidth="246.0" text="0">
                <font>
                   <Font size="22.0" />
                </font></Label>
@@ -141,14 +141,14 @@
             </GridPane>
          </children>
       </Pane>
-      <Label layoutX="758.0" layoutY="229.0" prefHeight="34.0" prefWidth="165.0" text="Elasped Time">
+      <Label alignment="CENTER_RIGHT" layoutX="358.0" layoutY="293.0" prefHeight="65.0" prefWidth="275.0" text="Elasped Time">
          <font>
-            <Font size="20.0" />
+            <Font size="37.0" />
          </font>
       </Label>
-      <Label fx:id="elaspedTime" layoutX="758.0" layoutY="263.0" prefHeight="30.0" prefWidth="237.0" text="0">
+      <Label fx:id="elaspedTime" layoutX="692.0" layoutY="299.0" prefHeight="54.0" prefWidth="366.0" text="0">
          <font>
-            <Font size="20.0" />
+            <Font size="37.0" />
          </font>
       </Label>
       <Pane layoutX="34.0" layoutY="15.0" prefHeight="154.0" prefWidth="258.0">
@@ -158,12 +158,12 @@
                   <Font name="Arial Black" size="18.0" />
                </font>
             </Label>
-            <Label layoutX="19.0" layoutY="38.0" prefHeight="27.0" prefWidth="80.0" text="Strength:">
+            <Label layoutX="19.0" layoutY="38.0" prefHeight="27.0" prefWidth="99.0" text="Strength:">
                <font>
                   <Font size="18.0" />
                </font>
             </Label>
-            <Label fx:id="strength" layoutX="119.0" layoutY="39.0" prefHeight="27.0" prefWidth="80.0" text="_" textFill="#13d613">
+            <Label fx:id="strength" layoutX="145.0" layoutY="39.0" prefHeight="27.0" prefWidth="80.0" text="_" textFill="#13d613">
                <font>
                   <Font size="18.0" />
                </font>
